feat: Complete edge case testing with 100% success rate
- Added comprehensive edge case testing suite with 48 test scenarios
- Enhanced validation in controllers for null JSON values
- Fixed exception handling order in GlobalExceptionHandler
- Added custom validation for template parameters, visit patient details, and test results
- Improved search parameter validation for whitespace handling
- Enhanced status filtering validation for empty parameters
- Created professional HTML reporting with visual dashboard
- Achieved 100% edge case test coverage across all API endpoints
- Added robust error handling for boundary conditions and business logic validation

Test Coverage:
- Template Validation: 10/10 tests (100%)
- Visit Management: 12/12 tests (100%)
- Lab Test Workflow: 13/13 tests (100%)
- Search & Filtering: 7/7 tests (100%)
- Billing System: 6/6 tests (100%)

Files added:
- api-focused-edge-tests.sh: Main edge case testing script
- EDGE-CASE-TESTING-SUMMARY.md: Executive summary
- Multiple HTML reports with professional styling